...

                <View style={styles.buttonContainer}>
                    <RoleButton
                        label="Admin"
                        icon="shield-check-outline"
                        onPress={() => handleRoleSelect(UserRole.ADMIN)}
                        testID="role_btn_admin"
                    />

                    <RoleButton
                        label="Vendor"
                        icon="account-wrench-outline"
                        onPress={() => handleRoleSelect(UserRole.VENDOR)}
                        testID="role_btn_vendor"
                    />

                    <RoleButton
                        label="User"
                        icon="account-outline"
                        onPress={() => handleRoleSelect(UserRole.CUSTOMER)}
...
