export const AVAILABLE_SERVICES = [
  'Roofing',
  'Solar',
  'Ac',
  'Plumbing',
  'Siding',
  'Gutters',
  'Electrical',
  'Pavers / turf',
  'Concrete',
  'Windows / doors',
  'Remodel',
  'Pool',
  'Surface treatments (roof/pavers/concrete etc)',
  'Painting',
  'Handy man / misc.',
  'Pressure washing / cleaning',
  'Build new',
  'Fencing',
  'Tree work',
  'Land clearing',
  'Drywall',
  'Landscaping',
  'Enclosures / screens',
  'Dock / bulkhead',
  'Flooring',
  'Remediation / water / fire / mold',
  'Other',
];
