...
                                        error={submitted && !street}
                                    />

                                    <View style={styles.formRow}>
                                        <TextInput
                                            ref={cityRef}
                                            label={submitted && !city ? "City *" : "City"}
                                            value={city}
                                            onChangeText={setCity}
                                            mode="outlined"
                                            style={[styles.input, { flex: 2, marginRight: 8 }]}
                                            returnKeyType="next"
                                            onSubmitEditing={() => zipRef.current?.focus()}
                                            error={submitted && !city}
                                        />
                                        <TextInput
                                            ref={zipRef}
                                            label={submitted && !zip ? "Zip *" : "Zip"}
                                            value={zip}
                                            onChangeText={setZip}
                                            mode="outlined"
                                            style={[styles.input, { flex: 1.2, marginRight: 8 }]}
                                            keyboardType="numeric"
                                            returnKeyType="next"
...
